<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="7dp"
        android:layout_y="99dp"
        android:text="@string/descrip_denun"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="120dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="176dp"
        android:text="@string/imagen_denuncia"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="12dp"
        android:text="@string/vacio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50px" />

    <Button
        android:id="@+id/button1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_x="8dp"
        android:layout_y="199dp"
        android:text="@string/elegir_img" />

    <TextView
        android:id="@+id/logText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="19dp"
        android:layout_y="254dp"
        android:text="@string/vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button2"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="288dp"
        android:text="@string/publicar_den" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="112dp"
        android:layout_y="350dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="214dp"
        android:layout_y="458dp"
        android:text="@string/v04"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="26dp"
        android:src="@drawable/logo" />

</AbsoluteLayout>